--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "false",
         "APP_URL": "https://fkhrdinn-journal.com",
+        "ASSET_URL": "https://fkhrdinn-journal.com",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
