--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,7 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://sky-meet-the-sea.vercel.app/",
-        "ASSET_URL": "https://sky-meet-the-sea.vercel.app/",
+        "APP_URL": "https://fkhrdinn-journal.com",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
