--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         "api/index.php": { "runtime": "vercel-php@0.5.2" }
     },
     "routes": [{
-        "src": "/(.*)",
+        "src": "/public",
         "dest": "/api/index.php" 
     }],
     "env": {
