--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "false",
-        "APP_URL": "https://fkhrdinn-journal.com",
+        "APP_URL": "https://sky-meet-the-sea.vercel.app/",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
